test/manifests/nginx-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pvc-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.7.9
  volumes:
    - name: vol
      persistentVolumeClaim:
        claimName: nginx
